Fixed mobile navigation menue alignment. Fixed copy to clipboard.

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -39,9 +39,10 @@
         position: fixed;
         display: flex;
         flex-direction: column;
-        align-items: right;
-        top: 3vh;
-        left: 3vh;
+        align-items: center;
+        top: 4vh;
+        /* right: 4vh; */
+        width: 100vw;
         
         -webkit-user-select: none;
         user-select: none;
@@ -53,7 +54,7 @@
         height: 32px;
         position: absolute;
         top: -7px;
-        left: -5px;
+        /* right: -5px; */
         
         cursor: pointer;
         
@@ -65,7 +66,7 @@
 
     .navMobile span {
         display: block;
-        width: 33px;
+        width: 35px;
         height: 4px;
         margin-bottom: 5px;
         
@@ -81,30 +82,8 @@
                     opacity 0.55s ease;
     }
 
-    .navMobile span:first-child {
-        transform-origin: 0% 0%;
-    }
-
-    .navMobile span:nth-last-child(2) {
-        transform-origin: 0% 100%;
-    }
-
-
-    .navMobile input:checked ~ span {
-        opacity: 1;
-        transform: rotate(45deg) translate(-2px, -1px);
-        background: tomato;
-    }
-
-    .navMobile input:checked ~ span:nth-last-child(3)
-    {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-    }
-
-    .navMobile input:checked ~ span:nth-last-child(2)
-    {
-        transform: rotate(-45deg) translate(0, -1px);
+    .navMobile input:checked ~ nav {
+        transform: translate(0, 0%);
     }
 
     .navMobile nav
@@ -125,19 +104,15 @@
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
     }
 
-    .navMobile input:checked ~ nav 
-    {
-        transform: none;
-    }
-
     .navBtn {
         background-color: rgb(14, 14, 14);
         width: 100vw;
-        height: 18vh;
+        height: 15vh;
         font-size: calc(2em + 1vw);
         font-family: 'Share Tech Mono', monospace;
         padding: 1%;
-        padding-left: 12.5vw;
+        /* padding-left: 12.5vw;
+        padding-right: 12.5vw; */
         border: none;
         color: lawngreen;
     }
